--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
 # except DB information
-DBconfig.java
+DBconfigInfo.java
 DBCPDataSource.java
 
 ### Eclipse ###
